cmake_minimum_required(VERSION 3.2)

project(IntersectionOfSegments)

include(cmake/function.cmake)

add_subdirectory(Segments)
add_subdirectory(AVL-Tree)
add_subdirectory(23-Tree)
add_subdirectory(Intersection)
add_subdirectory(SegmentGenerator)
add_subdirectory(SampleProgram)
add_subdirectory(Experiment1)
add_subdirectory(Experiment2)
add_subdirectory(Experiment3)
add_subdirectory(Experiment4)